--- a/Deployment Achievement.html
+++ b/Deployment Achievement.html
@@ -5,7 +5,7 @@
 <head>
   <title>Deployment Achievement</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="site.css">
+  <link rel="site" href="site.css">
   <link rel="icon" href="favicon.ico">
   <div class="topnav">
     <a class="active" href="home.html">Home</a>
