--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <head>
   <meta charset="utf-8">
   <title>Sean P. Oconnor White</title>
-  <link rel="stylesheet" href="external/stylesheet.css">
+  <link rel="site" href="site.css">
   <link rel="icon" href="favicon.ico">
 
 </head>
 <header>
   <div class="topnav">
-    <a class="active" href="home.html">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="about me.html">About Me</a>
     <a class="e" href="education.html">Education</a>
     <a href="Work Experiance.html">Work Experiance</a>
