--- a/about me.html
+++ b/about me.html
@@ -4,10 +4,10 @@
 <head>
   <title>Deployment Achievement</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="external/stylesheet.css">
+  <link rel="site" href="external/site.css">
   <link rel="icon" href="favicon.ico">
   <div class="topnav">
-    <a class="active" href="home.html">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="about me.html">About Me</a>
     <a class="education.html" href="education.html">Education</a>
     <a href="Work Experiance.html">Work Experiance</a>
