--- a/contact me.html
+++ b/contact me.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sean P. Oconnor white</title>
-<link rel="stylesheet" href="external/stylesheet.css">
+<link rel="site" href="external/site.css">
 </head>
 
   <body>
@@ -22,6 +22,6 @@
   </html>
 
   <body>
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <hr size="3" noshade>
   </body>
