--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sean P. Oconnor White</title>
-  <link rel="site" href="github.com/spow555/my-resume/master/site.css">
+  <link rel="site" type="text/css" href="github.com/spow555/my-resume/master/site.css">
   <link rel="icon" href="favicon.ico">
 
 </head>
