--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Sean P. Oconnor White</title>
   <link rel="site" 
         type="text/ css" 
-        href="github.com/spow555/my-resume/master/site.css"/>
+        href="https://github.com/spow555/spow555.github.io/my-resume/master/site.css"/>
   <link rel="icon" href="favicon.ico">
 
 </head>
