--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sean P. Oconnor White</title>
-  <link rel="site" 
-        type="text/ css" 
-        href="https://spow555.github.io/site.css">
+  <link rel="site" type="text/css" href="spow555.github.io/site.css">
   <link rel="icon" href="favicon.ico">
 
 </head>
