--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sean P. Oconnor White</title>
-  <link rel="site" href="site.css">
+  <link rel="stylesheet" href="css/site.css">
   <link rel="icon" href="favicon.ico">
 
 </head>
