--- a/Active Certifications.html
+++ b/Active Certifications.html
@@ -9,7 +9,7 @@
 </head>
 <header>
   <div class="topnav">
-    <a class="active" href="index">Home</a>
+    <a class="index" href="index">Home</a>
     <a href="about me.html">About Me</a>
     <a class="education.html" href="education.html">Education</a>
     <a href="Work Experiance.html">Work Experiance</a>
