--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/Users/sean/Documents/GitHub/My-Resume/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Sean P. Oconnor White</title>
   <link rel="icon" href="favicon.ico">
 
