--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css"/>
   <title>Sean P. Oconnor White</title>
   <link rel="icon" href="favicon.ico">
-
 </head>
 <header>
   <div class="topnav">
