--- a/about me.html
+++ b/about me.html
@@ -4,7 +4,7 @@
 <head>
   <title>Deployment Achievement</title>
   <meta charset="utf-8">
-  <link rel="main" type="text/css" href="css/main.css"/>
+  <link rel="main" type="text/css" href="main.css">
   <link rel="icon" href="favicon.ico">
   <div class="topnav">
     <a class="active" href="index.html">Home</a>
