--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="main" type="text/css" href="main.css"/>
+  <link rel="main" type="text/css" href="My-Resume/main.css"/>
   <title>Sean P. Oconnor White</title>
   <link rel="icon" href="favicon.ico">
 </head>
